weird scrollbar behavior fixed

--- a/style/css/info_index.css
+++ b/style/css/info_index.css
@@ -1,5 +1,6 @@
 body{
     min-height: 200vh;
+    overflow: hidden;
 }
 .container{
     margin-top: 5vh;
